--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -35,7 +35,7 @@
             <div class="boxcont">
               <div class="description">
                   
-                 <span id="gut_display"> <%= @activity.act_text.act_description %></span></br>
+                 <span id="gut_display"> <% if @activity.act_text %><%= @activity.act_text.act_description %><% end %></span></br>
                   <span id="to_show_more" ><a id="show_more_link" onclick="show_more_gut();"></br>( 展开详细介绍&gt;&gt;&gt; )</a></span>
               </div>
             </div>
