--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -1,16 +1,15 @@
 <div id="opi" class="page-wrapper clearfix">
 		<div class="full-page-holder">
-			<div class="full-page clearfix">
-				<div class="compatible">
-			<div id="content">
+			<div class="clearfix">
+				<div class="">
+			<div id="">
    
-      <div id="comfirm_diag" class="generic_dialog wallpro_dialog pop_dialog" style=""></div>
        <div class="grayheader clearfix">
         <div class="left_side">
-          <h2> 社联生日 </h2>
+          <h2> <%= @activity.act_subject %> </h2>
         </div>
       </div>
-      <div id="event" class="clearfix bg_wideline">
+      <div id="event" class="clearfix ">
         <!--左边栏-->
         <div class="left" id="eventDetail">
           <div class="box">
