--- a/app/views/home/_partylist.html.erb
+++ b/app/views/home/_partylist.html.erb
@@ -41,38 +41,22 @@
 
 																	
 																		<td nowrap="nowrap" colspan="2">
-																			<span id="join22085"
-																				style="display:none">
+<% if partylist.start_time < Time.now 
+         if partylist.end_time < Time.now %>
+		 <span style="color:red">该活动已经结束</span>
+		 <% else %>
+		 <span style="color:green">该活动正在进行</span>
+<% end %>
+<% else %>
 
-																				<div id="id1234" class="notice_event2 event_graybg">
-																					<h4>
-																						我会参加这个活动																					</h4>
-																					<span class="notice_modify2"><a
-																						href="javascript:openPopup('1','3','22085','');">修改</a>																					</span>
-																					<label>
-																						已有
-																						<span id="countjoin122085">11</span>人参加/
-																						<span id="countinterest122085">5</span>人感兴趣																					</label>
-																				</div> </span>
-																			<span id="intere22085"
-																				style="display:none">
-
-																				<div id="id1234" class="notice_event2 event_graybg">
-																					<h4>
-																						我对这个活动感兴趣																					</h4>
-																					<span class="notice_modify2"><a
-																						href="javascript:openPopup('2','3','22085','');">修改</a>																					</span>
-																					<label>
-																						已有
-																						<span id="countjoin222085">11</span>人参加/
-																						<span id="countinterest222085">5</span>人感兴趣																					</label>
-																				</div> </span>
 																			<span id="bu22085"
 																				style="display:">
 																				<div class="notice_event3 event_graybg">
-				   <% 
+<span id="bu22085"
+																				style="display:">
+<% 
 				   @my_activity = @current_user.my_activity_find_by_id(partylist.id)
-				   if @my_activity && @my_activity.join %> 
+				   if @my_activity && @my_activity.join %>
 				         我已经关注了，<%= link_to "我不想关注了", :controller => :event, :action => :unjoin, :id => partylist.id %>
 				   <% else %>
 					   <%= link_to "我要关注", :controller => :event, :action => :join, :id => partylist.id %> | 
@@ -81,7 +65,8 @@
 					   <% else %>
 					        <%= link_to "我感兴趣", :controller => :event, :action => :interest, :id => partylist.id %>
 					   <% end %>
-				   <% end %> 
+				   <% end %> |
+				   <%= link_to "分享",:controller => :event, :action => :share, :id => partylist.id %>
 																					<h4>
 
 																						已有
@@ -89,7 +74,8 @@
 																						人参加 /
 																						<span id="countinterest022085"><%= partylist.interest_user.length %></span>
 																						人感兴趣																					</h4>
-																				</div> </span>																		</td>
+																			</span></div></span>
+<% end %>   														</td>
 																</tr>
 															</tbody>
 														</table>
