--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,36 @@
+<div class="event_header_block clearfix">
+  <h2 class="event_header"><%= @act_location %> <a onclick="seeOtherCity();" href="#">查看其它城市的活动</a> </h2>
+ <div class="event_search">
+						<form method="get" action="home">
+
+							<input type="hidden" value="searchEvent" name="d" />
+							<input type="text" autocomplete="off" id="keywords"
+								name="keywords" class="search_event" />
+							<input name="" type="image" class="search_new_btn"
+								src="http://event.xiaonei.com/img/search_new_btn.gif" align="absmiddle"
+								style="margin:-1px 0 0 -5px" />
+						</form>
+  </div>
+</div>
+<div style="position:relative;">
+<div id="sub-nav" style="position:relative;">
+						<ul>
+						    <% if !@act_location.blank? %>
+							<li class="selected">
+								<a href="#" ><%= @act_location %></a>
+							</li>
+							<% end %>
+							<li >
+								<div class="event_nav_drop">
+									<%= link_to "全部城市", {:controller => :home, :action => :index, :location => ""},:id => "event_drop", :class => "event_nav_link"%>
+								</div>
+
+							</li>
+							
+						</ul>
+
+  </div>
+ </div>
 <div id="oak" class="gray clearfix">
 						<div id="event_left">
 							<div class="pager-top">
@@ -21,19 +54,17 @@
 								<label>
 									活动时间：
 								</label>
-								<select onchange="chgunivright()" name="days" id="days"
+								<select onchange="chgunivright()" name="select_days" id="select_days"
 									class="inputtext">
 
-									<option selected="selected"
+									<option 
 										value="7">
 										一周内
 									</option>
-									<option 
-										value="31">
+									<option  value="31"  <% if @time_select.to_i == 31 -%>selected="selected"<% end -%> >
 										一个月内
 									</option>
-									<option 
-										value="93">
+									<option  value="93" <% if @time_select.to_i == 93 %>selected="selected"<% end %> >
 										三个月内
 									</option>
 
