--- a/app/views/home/network.html.erb
+++ b/app/views/home/network.html.erb
@@ -2,7 +2,7 @@
 首次登陆请选择您所在的城市或者你想关注的城市
   <form id="form1" name="form1" method="post" action="home/save_network">
   <label>
-  <select name="province">
+  <select name="city">
 <option value="北京">北京</option>
     <option value="长春">长春</option>
     <option value="长沙">长沙</option>
