--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -711,7 +711,9 @@ padding:2px;
 #sub-nav .pagerpro-title {padding: 0 0 5px;float: left;}
 .author{float:left;}
 </style>
-<div class="event_top_block clearfix"><span id="pipe"><%= link_to "宣讲会",:controller => :home, :action => :index %> | <%= link_to "我关注的宣讲会",:controller => :home, :action => :my %> | <%= link_to "好友关注的宣讲会",:controller => :home, :action => :friend %></span><span class="help"><a href="#">帮助</a></span>
+<div class="event_top_block clearfix">
+<div><img src="http://fmn022.xnimg.cn/fmn022/pic001/20081111/23/30/large_OTfp_3862m132095.jpg" ></div>
+<span id="pipe"><%= link_to "宣讲会",:controller => :home, :action => :index %> | <%= link_to "我关注的宣讲会",:controller => :home, :action => :my %> | <%= link_to "好友关注的宣讲会",:controller => :home, :action => :friend %></span><span class="help"><a href="#">帮助</a></span>
 </div>
 <div id="yield">
 <%= yield -%>
