--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -159,7 +159,7 @@ line-height:20px;
 	margin-top: 0px; color: #333333;
 }
 .description{
-	width:408px;color: #333333; line-height: 18px;	word-break:break-all;word-wrap:break-word;
+	width:520px;color: #333333; line-height: 18px;	word-break:break-all;word-wrap:break-word;
 }
 #event_member{
 	margin-top: 10px;
@@ -712,7 +712,7 @@ padding:2px;
 .author{float:left;}
 </style>
 <div class="event_top_block clearfix">
-<div><img src="http://fmn022.xnimg.cn/fmn022/pic001/20081111/23/30/large_OTfp_3862m132095.jpg" ></div>
+<div><a href="http://www.iease.com.cn" target="_blank"><img src="http://fmn022.xnimg.cn/fmn022/pic001/20081111/23/30/large_OTfp_3862m132095.jpg" ></a></div>
 <span id="pipe"><%= link_to "宣讲会",:controller => :home, :action => :index %> | <%= link_to "我关注的宣讲会",:controller => :home, :action => :my %> | <%= link_to "好友关注的宣讲会",:controller => :home, :action => :friend %></span><span class="help"><a href="#">帮助</a></span>
 </div>
 <div id="yield">
