--- a/app/views/event/message.html.erb
+++ b/app/views/event/message.html.erb
@@ -1,12 +1,8 @@
 <div id="content">
 				<div id="toc">
-					<p class="status">
-						(共
-						<span class="count"><%= @message.length %></span>留言)
-					</p>
 					<p class="crumbs">
 						<%= link_to @activity.act_subject, :controller => :event, :action => :show, :id => @activity.id %><span
-							class="pipe"> / </span>留言列表
+							class="pipe"> / </span>留言列表(共<span class="count"><%= @message.length %></span>条留言)
 					</p>
 				</div>
 </div>
@@ -28,6 +24,20 @@
 					<input type="submit" class="inputbutton" value="留言" />
                   </DIV>
                 </FORM>
+				<div>
+  <center>
+  <%if @page.to_i > 1 then %>
+    <%= link_to "上一页", { :action => controller.action_name, :page => (@page.to_i - 1)}, {:class => "chn"} %>
+  <% else %>
+    上一页
+  <% end %>
+  &nbsp;
+  <%if @page.to_i < @message.total_pages then %>
+    <%= link_to "下一页", { :action => controller.action_name, :page => (@page.to_i + 1)}, {:class => "chn"} %>
+  <% else %>
+    下一页
+  <% end %>
+</center></div>
 		<%= render(:partial => "commit", :object => @message ) %>
                   
 </DIV>
