--- a/app/views/event/userlist.html.erb
+++ b/app/views/event/userlist.html.erb
@@ -10,4 +10,18 @@
 					</p>
 				</div>
 </div>
+<div>
+  <center>
+  <%if @page.to_i > 1 then %>
+    <%= link_to "上一页", { :action => controller.action_name, :page => (@page.to_i - 1)}, {:class => "chn"} %>
+  <% else %>
+    上一页
+  <% end %>
+  &nbsp;
+  <%if @page.to_i < @userlist.total_pages then %>
+    <%= link_to "下一页", { :action => controller.action_name, :page => (@page.to_i + 1)}, {:class => "chn"} %>
+  <% else %>
+    下一页
+  <% end %>
+</center></div>
 <%= render(:partial => "user", :collection => @userlist ) %>
