--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,6 +40,20 @@
 							</div>
 
 										<%= render(:partial => "partylist", :collection => @activity )%>
+							<div>
+  <center>
+  <%if @page.to_i > 1 then %>
+    <%= link_to "上一页", { :action => controller.action_name, :page => (@page.to_i - 1),:location => @act_location, :keywords => @keywords, :time_select => @time_select}, {:class => "chn"} %>
+  <% else %>
+    上一页
+  <% end %>
+  &nbsp;
+  <%if @page.to_i < @activity.total_pages then %>
+    <%= link_to "下一页", { :action => controller.action_name, :page => (@page.to_i + 1),:location => @act_location, :keywords => @keywords, :time_select => @time_select}, {:class => "chn"} %>
+  <% else %>
+    下一页
+  <% end %>
+</center></div>
 </div>
 <div id="event_right">
 							<h2>
