--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -1,16 +1,14 @@
 <div id="opi" class="page-wrapper clearfix">
 		<div class="full-page-holder">
 			<div class="clearfix">
-				<div class="">
-			<div id="">
-   
+				<div >
+			<div>
        <div class="grayheader clearfix">
         <div class="left_side">
           <h2> <%= @activity.act_subject %> </h2>
         </div>
       </div>
       <div id="event" class="clearfix ">
-        <!--左边栏-->
         <div class="left" id="eventDetail">
           <div class="box">
             <h3> 活动信息 </h3>
@@ -30,17 +28,13 @@
           </div>
           <div class="box">
             <h3> 活动介绍 </h3>
-            
             <div class="boxcont">
               <div class="description">
-                  
-                 <span id="gut_display"> <% if @activity.act_text %><%= truncate(@activity.act_text.act_description.chars.gsub("\n","<br>"),400)%><% end %></span></br>
+                 <span id="gut_display"> <% if @activity.act_text %><%#= truncate(h(@activity.act_text.act_description.chars),400).gsub("\n","<br>")%><% end %></span></br>
                   <span id="to_show_more" ><a href="http://www.iease.com.cn/events/<%= @activity.id %>" target="_blank">查看详情</a></span>
               </div>
             </div>
           </div>
-          
-          
             <div class="box">
               <h3> 参加这个活动的成员 </h3>
               <div class="subheader clearfix">
@@ -58,19 +52,13 @@
                           <td class="personInfo"><div class="personIcon"><xn:profile-pic uid="<%= xid %>" linked="true" /></div>
                             <div class="personName"><xn:name uid="<%= xid %>" linked="true" /></div></td>
                            <% end %>
-                        
                       </tr>
                     </tbody>
                   </table>
                 </div>
-              
               </div>
             </div>
           
-          <!--  -->
-          
-            
-                <!-- 留言版本开始 -->
 <DIV class="box" id="userTalk">
               <H3><span style="float:right"><%= link_to "所有留言", {:controller => :event, :action => :message, :id => @activity.id },:name => "message"%></span>留言板 </H3>
               
@@ -82,7 +70,6 @@
                
                         <FORM method="post" name="subjectForm1"  action="event/save_message">
                    <DIV id="starttalkForm" style="DISPLAY: block">
-                    
                     <input type="hidden" name="commit[reply_xid]"  id="commit[reply_xid]" value="" /> 
 				    <input type="hidden" name="commit[activity_id]" value="<%= @activity.id %>" /> 
                     <textarea tabindex="1" rows="4" cols="100" id="commit[content]" name="commit[content]"></textarea>
@@ -93,11 +80,6 @@
                   
 </DIV></DIV>
           
-          <!--班级留言结束-->
-          <!--  -->
-
-        <!--/左边栏-->
-        <!--右边栏-->
         <div class="right" id="eventInfo">
           <div class="box" id="eventSummary">
            
@@ -109,16 +91,13 @@
           <div class="box">
             <h3> 活动状态</h3>
             <div class="boxcont">
-               <span id="bu22085"
-										
-                style="display:"
-                >
+               <span  style="display:" >
                 <div class="notice_event">
-                  <h4> <span id="countinterest022085"><%= @activity.join_user.length %></span> 人关注 / <span id="countjoin022085"><%= @activity.interest_user.length %></span> 人感兴趣</h4>
+                  <h4> <span ><%= @activity.join_user.length %></span> 人关注 / <span ><%= @activity.interest_user.length %></span> 人感兴趣</h4>
                    <% if @my_activity && @my_activity.join %> 
 				         我已经关注了，<%= link_to "我不想关注了", :controller => :event, :action => :unjoin, :id => @activity.id %>
 				   <% else %>
-					   <%= link_to "我要关注", :controller => :event, :action => :join, :id => @activity.id %> | 
+					   <input type="button" onclick="set_join(<%= @activity.id %>)" value="我要关注" > | 
 					   <% if @my_activity && @my_activity.interest %>
 					        <%= link_to "我不感兴趣了", :controller => :event, :action => :uninterest, :id => @activity.id %>
 					   <% else %>
@@ -132,12 +111,7 @@
           </div>
           </div>
       </div>
-      <!--右边栏-->
     </div>
-    <!--event结束-->
-   
-  <!--content结束-->
-  
 				</div>
 				
 			</div>
